--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanbahn",
+  "name": "todo-application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "express-session": "^1.15.6",
     "http-proxy-middleware": "^0.19.0",
     "lodash": "^4.17.11",
+    "pg": "^7.9.0",
     "ramda": "^0.25.0",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
@@ -20,10 +21,11 @@
     "typescript": "^3.1.3"
   },
   "devDependencies": {
+    "@types/pg": "^7.4.14",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
     "@types/lodash": "^4.14.117",
-    "@types/node": "^10.5.1",
+    "@types/node": "^10.14.4",
     "@types/ramda": "^0.25.39",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
