--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "reflect-metadata": "^0.1.12",
     "reset-css": "^4.0.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "yesql": "^3.2.2"
   },
   "devDependencies": {
     "@types/pg": "^7.4.14",
